--- a/marketplace-react/package.json
+++ b/marketplace-react/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "augie-marketplace",
+  "name": "marketplace-react",
   "version": "0.1.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/AugustanaCSC490Spring2020/AugieMarketplace.git"
-  },
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.9.4",
-    "@material-ui/icons": "4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "7.2.0",
-    "react-scripts": "3.4.0",
-    "redux": "4.0.5"
+    "firebase": "^7.14.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
