--- a/marketplace-react/package.json
+++ b/marketplace-react/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.6.1",
-    "@material-ui/pickers": "^3.2.10",
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
